add html structure and content to index

--- a/Oksana/index.html
+++ b/Oksana/index.html
@@ -10,6 +10,19 @@
 
 <body>
 
+    <h2>Headline 1</h2>
+    <h2>Headline 2</h2>
+    <h2>Headline 3</h2>
+
+
+    <p>text</p>
+    <p>more text</p>
+    <p>even more text</p>
+
+
+    <script>
+    </script>
+
 </body>
 
 </html>
