finish basic exercises

--- a/Oksana/index.html
+++ b/Oksana/index.html
@@ -9,20 +9,21 @@
 </head>
 
 <body>
+    <h1>Temperature</h1>
+    <h2 class="headline"></h2>
+    <h2 class="headline"></h2>
 
-    <h2>Headline 1</h2>
-    <h2>Headline 2</h2>
-    <h2>Headline 3</h2>
 
+    <h2 class="headline">Headline 3</h2>
+    <h2 class="headline">Headline 4</h2>
 
     <p>text</p>
     <p>more text</p>
     <p>even more text</p>
+    <p>so much more text</p>
 
 
-    <script>
-    </script>
-
+    <script src="file.js"></script>
 </body>
 
 </html>
