--- a/Christine/index.html
+++ b/Christine/index.html
@@ -9,9 +9,11 @@
 </head>
 <body>
 
-  <div id="temp" class="container">
+  <div id="temp" class="container"></div>
 
-  </div>
+  <div id="grades" class="container neutral"></div>
+
+  <div id="fiZZbuZZ" class="container orange"></div>
 
 
   <script src="script.js"></script>
