add intermediate exxercises

--- a/Oksana/index.html
+++ b/Oksana/index.html
@@ -14,13 +14,13 @@
     <h2 class="headline"></h2>
 
 
-    <h2 class="headline">Headline 3</h2>
-    <h2 class="headline">Headline 4</h2>
+    <h2 class="headline">Headline</h2>
+    <h2 class="headline">Headline 2</h2>
 
-    <p>text</p>
-    <p>more text</p>
-    <p>even more text</p>
-    <p>so much more text</p>
+    <p></p>
+    <p id="p3"></p>
+    <p></p>
+    <p></p>
 
 
     <script src="file.js"></script>
