no working solutions ;-)

--- a/Christine/index.html
+++ b/Christine/index.html
@@ -15,6 +15,9 @@
 
   <div id="fiZZbuZZ" class="container orange"></div>
 
+  <div id="stars" class="container"></div>
+
+  <div id="studenti" class="container neutral"></div>
 
   <script src="script.js"></script>
 </body>
